[tool.poetry]
name = "klickbrick-ryx"
version = "0.1.0"
description = "CLI liveproject for Manning"
authors = ["Ryxai <jmichaelbaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
klickbrick = 'klickbrick-ryx.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
